--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 Simple library for generating word clouds.
 
-An example:
-
-![Example](http://img514.imageshack.us/img514/9206/algosxh9.png)
+[An example image](http://img514.imageshack.us/img514/9206/algosxh9.png)
