give up trying to use githubs markdown

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Simple library for generating word clouds.
 
-[An example image](http://img514.imageshack.us/img514/9206/algosxh9.png)
+Example image:
+
+http://img514.imageshack.us/img514/9206/algosxh9.png
